--- a/Classification/MNIST.ipynb
+++ b/Classification/MNIST.ipynb
@@ -219,24 +219,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y_train_5 = (y_train==5)\n",
+    "y_test_5 = (y_test==5)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SGDClassifier(alpha=0.0001, average=False, class_weight=None,\n",
+       "              early_stopping=False, epsilon=0.1, eta0=0.0, fit_intercept=True,\n",
+       "              l1_ratio=0.15, learning_rate='optimal', loss='hinge',\n",
+       "              max_iter=1000, n_iter_no_change=5, n_jobs=None, penalty='l2',\n",
+       "              power_t=0.5, random_state=42, shuffle=True, tol=0.001,\n",
+       "              validation_fraction=0.1, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import SGDClassifier\n",
+    "\n",
+    "sgd_clf = SGDClassifier(max_iter=1000, tol=1e-3, random_state=42)\n",
+    "sgd_clf.fit(X_train, y_train_5)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.95035, 0.96035, 0.9604 ])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "cross_val_score(sgd_clf, X_train, y_train_5, cv=3, scoring=\"accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_split.py:296: FutureWarning: Setting a random_state has no effect since shuffle is False. This will raise an error in 0.24. You should leave random_state to its default (None), or set shuffle=True.\n",
+      "  FutureWarning\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.95035\n",
+      "0.96035\n",
+      "0.9604\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.base import clone\n",
+    "\n",
+    "skfolds = StratifiedKFold(n_splits=3, random_state=42)\n",
+    "\n",
+    "for train_index, test_index in skfolds.split(X_train, y_train_5):\n",
+    "    clone_clf = clone(sgd_clf)\n",
+    "    X_train_folds = X_train[train_index]\n",
+    "    y_train_folds = y_train_5[train_index]\n",
+    "    X_test_fold = X_train[test_index]\n",
+    "    y_test_fold = y_train_5[test_index]\n",
+    "    \n",
+    "    clone_clf.fit(X_train_folds, y_train_folds)\n",
+    "    y_pred = clone_clf.predict(X_test_fold)\n",
+    "    n_correct = sum(y_pred==y_test_fold)\n",
+    "    print(n_correct/len(y_pred))"
+   ]
   },
   {
    "cell_type": "code",
