--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -4584,7 +4584,201 @@
       "[CV] .................... C=1.0, gamma=0.03, kernel=rbf, total=  13.5s\n",
       "[CV] C=1.0, gamma=0.03, kernel=rbf ...................................\n",
       "[CV] .................... C=1.0, gamma=0.03, kernel=rbf, total=  12.9s\n",
-      "[CV] C=1.0, gamma=0.03, kernel=rbf ...................................\n"
+      "[CV] C=1.0, gamma=0.03, kernel=rbf ...................................\n",
+      "[CV] .................... C=1.0, gamma=0.03, kernel=rbf, total=  11.2s\n",
+      "[CV] C=1.0, gamma=0.03, kernel=rbf ...................................\n",
+      "[CV] .................... C=1.0, gamma=0.03, kernel=rbf, total=  11.3s\n",
+      "[CV] C=1.0, gamma=0.1, kernel=rbf ....................................\n",
+      "[CV] ..................... C=1.0, gamma=0.1, kernel=rbf, total=  17.5s\n",
+      "[CV] C=1.0, gamma=0.1, kernel=rbf ....................................\n",
+      "[CV] ..................... C=1.0, gamma=0.1, kernel=rbf, total=  14.5s\n",
+      "[CV] C=1.0, gamma=0.1, kernel=rbf ....................................\n",
+      "[CV] ..................... C=1.0, gamma=0.1, kernel=rbf, total=  13.9s\n",
+      "[CV] C=1.0, gamma=0.1, kernel=rbf ....................................\n",
+      "[CV] ..................... C=1.0, gamma=0.1, kernel=rbf, total=  15.0s\n",
+      "[CV] C=1.0, gamma=0.1, kernel=rbf ....................................\n",
+      "[CV] ..................... C=1.0, gamma=0.1, kernel=rbf, total=  30.5s\n",
+      "[CV] C=1.0, gamma=0.3, kernel=rbf ....................................\n",
+      "[CV] ..................... C=1.0, gamma=0.3, kernel=rbf, total=  18.2s\n",
+      "[CV] C=1.0, gamma=0.3, kernel=rbf ....................................\n",
+      "[CV] ..................... C=1.0, gamma=0.3, kernel=rbf, total=  13.5s\n",
+      "[CV] C=1.0, gamma=0.3, kernel=rbf ....................................\n",
+      "[CV] ..................... C=1.0, gamma=0.3, kernel=rbf, total=  13.7s\n",
+      "[CV] C=1.0, gamma=0.3, kernel=rbf ....................................\n",
+      "[CV] ..................... C=1.0, gamma=0.3, kernel=rbf, total=  12.3s\n",
+      "[CV] C=1.0, gamma=0.3, kernel=rbf ....................................\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] ..................... C=1.0, gamma=0.3, kernel=rbf, total=  13.1s\n",
+      "[CV] C=1.0, gamma=1.0, kernel=rbf ....................................\n",
+      "[CV] ..................... C=1.0, gamma=1.0, kernel=rbf, total=  16.4s\n",
+      "[CV] C=1.0, gamma=1.0, kernel=rbf ....................................\n",
+      "[CV] ..................... C=1.0, gamma=1.0, kernel=rbf, total=  20.6s\n",
+      "[CV] C=1.0, gamma=1.0, kernel=rbf ....................................\n",
+      "[CV] ..................... C=1.0, gamma=1.0, kernel=rbf, total=  22.2s\n",
+      "[CV] C=1.0, gamma=1.0, kernel=rbf ....................................\n",
+      "[CV] ..................... C=1.0, gamma=1.0, kernel=rbf, total=  14.9s\n",
+      "[CV] C=1.0, gamma=1.0, kernel=rbf ....................................\n",
+      "[CV] ..................... C=1.0, gamma=1.0, kernel=rbf, total=  13.1s\n",
+      "[CV] C=1.0, gamma=3.0, kernel=rbf ....................................\n",
+      "[CV] ..................... C=1.0, gamma=3.0, kernel=rbf, total=  15.4s\n",
+      "[CV] C=1.0, gamma=3.0, kernel=rbf ....................................\n",
+      "[CV] ..................... C=1.0, gamma=3.0, kernel=rbf, total=  14.4s\n",
+      "[CV] C=1.0, gamma=3.0, kernel=rbf ....................................\n",
+      "[CV] ..................... C=1.0, gamma=3.0, kernel=rbf, total=  13.6s\n",
+      "[CV] C=1.0, gamma=3.0, kernel=rbf ....................................\n",
+      "[CV] ..................... C=1.0, gamma=3.0, kernel=rbf, total=  15.2s\n",
+      "[CV] C=1.0, gamma=3.0, kernel=rbf ....................................\n",
+      "[CV] ..................... C=1.0, gamma=3.0, kernel=rbf, total=  13.7s\n",
+      "[CV] C=3.0, gamma=0.01, kernel=rbf ...................................\n",
+      "[CV] .................... C=3.0, gamma=0.01, kernel=rbf, total=  12.8s\n",
+      "[CV] C=3.0, gamma=0.01, kernel=rbf ...................................\n",
+      "[CV] .................... C=3.0, gamma=0.01, kernel=rbf, total=  14.2s\n",
+      "[CV] C=3.0, gamma=0.01, kernel=rbf ...................................\n",
+      "[CV] .................... C=3.0, gamma=0.01, kernel=rbf, total=  13.0s\n",
+      "[CV] C=3.0, gamma=0.01, kernel=rbf ...................................\n",
+      "[CV] .................... C=3.0, gamma=0.01, kernel=rbf, total=  13.1s\n",
+      "[CV] C=3.0, gamma=0.01, kernel=rbf ...................................\n",
+      "[CV] .................... C=3.0, gamma=0.01, kernel=rbf, total=  14.3s\n",
+      "[CV] C=3.0, gamma=0.03, kernel=rbf ...................................\n",
+      "[CV] .................... C=3.0, gamma=0.03, kernel=rbf, total=  25.5s\n",
+      "[CV] C=3.0, gamma=0.03, kernel=rbf ...................................\n",
+      "[CV] .................... C=3.0, gamma=0.03, kernel=rbf, total=  39.4s\n",
+      "[CV] C=3.0, gamma=0.03, kernel=rbf ...................................\n",
+      "[CV] .................... C=3.0, gamma=0.03, kernel=rbf, total=  47.0s\n",
+      "[CV] C=3.0, gamma=0.03, kernel=rbf ...................................\n",
+      "[CV] .................... C=3.0, gamma=0.03, kernel=rbf, total=  38.7s\n",
+      "[CV] C=3.0, gamma=0.03, kernel=rbf ...................................\n",
+      "[CV] .................... C=3.0, gamma=0.03, kernel=rbf, total=  16.5s\n",
+      "[CV] C=3.0, gamma=0.1, kernel=rbf ....................................\n",
+      "[CV] ..................... C=3.0, gamma=0.1, kernel=rbf, total=  18.8s\n",
+      "[CV] C=3.0, gamma=0.1, kernel=rbf ....................................\n",
+      "[CV] ..................... C=3.0, gamma=0.1, kernel=rbf, total=  24.6s\n",
+      "[CV] C=3.0, gamma=0.1, kernel=rbf ....................................\n",
+      "[CV] ..................... C=3.0, gamma=0.1, kernel=rbf, total=  18.8s\n",
+      "[CV] C=3.0, gamma=0.1, kernel=rbf ....................................\n",
+      "[CV] ..................... C=3.0, gamma=0.1, kernel=rbf, total=  13.9s\n",
+      "[CV] C=3.0, gamma=0.1, kernel=rbf ....................................\n",
+      "[CV] ..................... C=3.0, gamma=0.1, kernel=rbf, total=  22.2s\n",
+      "[CV] C=3.0, gamma=0.3, kernel=rbf ....................................\n",
+      "[CV] ..................... C=3.0, gamma=0.3, kernel=rbf, total=  25.9s\n",
+      "[CV] C=3.0, gamma=0.3, kernel=rbf ....................................\n",
+      "[CV] ..................... C=3.0, gamma=0.3, kernel=rbf, total=  29.8s\n",
+      "[CV] C=3.0, gamma=0.3, kernel=rbf ....................................\n",
+      "[CV] ..................... C=3.0, gamma=0.3, kernel=rbf, total=  32.9s\n",
+      "[CV] C=3.0, gamma=0.3, kernel=rbf ....................................\n",
+      "[CV] ..................... C=3.0, gamma=0.3, kernel=rbf, total=  21.7s\n",
+      "[CV] C=3.0, gamma=0.3, kernel=rbf ....................................\n",
+      "[CV] ..................... C=3.0, gamma=0.3, kernel=rbf, total=  34.2s\n",
+      "[CV] C=3.0, gamma=1.0, kernel=rbf ....................................\n",
+      "[CV] ..................... C=3.0, gamma=1.0, kernel=rbf, total=  25.7s\n",
+      "[CV] C=3.0, gamma=1.0, kernel=rbf ....................................\n",
+      "[CV] ..................... C=3.0, gamma=1.0, kernel=rbf, total=  24.3s\n",
+      "[CV] C=3.0, gamma=1.0, kernel=rbf ....................................\n",
+      "[CV] ..................... C=3.0, gamma=1.0, kernel=rbf, total=  42.6s\n",
+      "[CV] C=3.0, gamma=1.0, kernel=rbf ....................................\n",
+      "[CV] ..................... C=3.0, gamma=1.0, kernel=rbf, total=  32.4s\n",
+      "[CV] C=3.0, gamma=1.0, kernel=rbf ....................................\n",
+      "[CV] ..................... C=3.0, gamma=1.0, kernel=rbf, total=  20.0s\n",
+      "[CV] C=3.0, gamma=3.0, kernel=rbf ....................................\n",
+      "[CV] ..................... C=3.0, gamma=3.0, kernel=rbf, total=  21.3s\n",
+      "[CV] C=3.0, gamma=3.0, kernel=rbf ....................................\n",
+      "[CV] ..................... C=3.0, gamma=3.0, kernel=rbf, total=  30.9s\n",
+      "[CV] C=3.0, gamma=3.0, kernel=rbf ....................................\n",
+      "[CV] ..................... C=3.0, gamma=3.0, kernel=rbf, total=  42.9s\n",
+      "[CV] C=3.0, gamma=3.0, kernel=rbf ....................................\n",
+      "[CV] ..................... C=3.0, gamma=3.0, kernel=rbf, total=  39.2s\n",
+      "[CV] C=3.0, gamma=3.0, kernel=rbf ....................................\n",
+      "[CV] ..................... C=3.0, gamma=3.0, kernel=rbf, total=  23.7s\n",
+      "[CV] C=10.0, gamma=0.01, kernel=rbf ..................................\n",
+      "[CV] ................... C=10.0, gamma=0.01, kernel=rbf, total=  23.6s\n",
+      "[CV] C=10.0, gamma=0.01, kernel=rbf ..................................\n",
+      "[CV] ................... C=10.0, gamma=0.01, kernel=rbf, total=  38.4s\n",
+      "[CV] C=10.0, gamma=0.01, kernel=rbf ..................................\n",
+      "[CV] ................... C=10.0, gamma=0.01, kernel=rbf, total=  28.6s\n",
+      "[CV] C=10.0, gamma=0.01, kernel=rbf ..................................\n",
+      "[CV] ................... C=10.0, gamma=0.01, kernel=rbf, total=  31.6s\n",
+      "[CV] C=10.0, gamma=0.01, kernel=rbf ..................................\n",
+      "[CV] ................... C=10.0, gamma=0.01, kernel=rbf, total=  44.8s\n",
+      "[CV] C=10.0, gamma=0.03, kernel=rbf ..................................\n",
+      "[CV] ................... C=10.0, gamma=0.03, kernel=rbf, total=  38.7s\n",
+      "[CV] C=10.0, gamma=0.03, kernel=rbf ..................................\n",
+      "[CV] ................... C=10.0, gamma=0.03, kernel=rbf, total=  39.2s\n",
+      "[CV] C=10.0, gamma=0.03, kernel=rbf ..................................\n",
+      "[CV] ................... C=10.0, gamma=0.03, kernel=rbf, total=  44.6s\n",
+      "[CV] C=10.0, gamma=0.03, kernel=rbf ..................................\n",
+      "[CV] ................... C=10.0, gamma=0.03, kernel=rbf, total=  41.2s\n",
+      "[CV] C=10.0, gamma=0.03, kernel=rbf ..................................\n",
+      "[CV] ................... C=10.0, gamma=0.03, kernel=rbf, total=  19.8s\n",
+      "[CV] C=10.0, gamma=0.1, kernel=rbf ...................................\n",
+      "[CV] .................... C=10.0, gamma=0.1, kernel=rbf, total=  17.8s\n",
+      "[CV] C=10.0, gamma=0.1, kernel=rbf ...................................\n",
+      "[CV] .................... C=10.0, gamma=0.1, kernel=rbf, total=  33.4s\n",
+      "[CV] C=10.0, gamma=0.1, kernel=rbf ...................................\n",
+      "[CV] .................... C=10.0, gamma=0.1, kernel=rbf, total=  40.3s\n",
+      "[CV] C=10.0, gamma=0.1, kernel=rbf ...................................\n",
+      "[CV] .................... C=10.0, gamma=0.1, kernel=rbf, total=  24.3s\n",
+      "[CV] C=10.0, gamma=0.1, kernel=rbf ...................................\n",
+      "[CV] .................... C=10.0, gamma=0.1, kernel=rbf, total=  29.4s\n",
+      "[CV] C=10.0, gamma=0.3, kernel=rbf ...................................\n",
+      "[CV] .................... C=10.0, gamma=0.3, kernel=rbf, total=  27.9s\n",
+      "[CV] C=10.0, gamma=0.3, kernel=rbf ...................................\n",
+      "[CV] .................... C=10.0, gamma=0.3, kernel=rbf, total=  19.7s\n",
+      "[CV] C=10.0, gamma=0.3, kernel=rbf ...................................\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] .................... C=10.0, gamma=0.3, kernel=rbf, total=  24.3s\n",
+      "[CV] C=10.0, gamma=0.3, kernel=rbf ...................................\n",
+      "[CV] .................... C=10.0, gamma=0.3, kernel=rbf, total=  26.6s\n",
+      "[CV] C=10.0, gamma=0.3, kernel=rbf ...................................\n",
+      "[CV] .................... C=10.0, gamma=0.3, kernel=rbf, total=  20.2s\n",
+      "[CV] C=10.0, gamma=1.0, kernel=rbf ...................................\n",
+      "[CV] .................... C=10.0, gamma=1.0, kernel=rbf, total=  18.8s\n",
+      "[CV] C=10.0, gamma=1.0, kernel=rbf ...................................\n",
+      "[CV] .................... C=10.0, gamma=1.0, kernel=rbf, total=  20.1s\n",
+      "[CV] C=10.0, gamma=1.0, kernel=rbf ...................................\n",
+      "[CV] .................... C=10.0, gamma=1.0, kernel=rbf, total=  27.2s\n",
+      "[CV] C=10.0, gamma=1.0, kernel=rbf ...................................\n",
+      "[CV] .................... C=10.0, gamma=1.0, kernel=rbf, total=  28.2s\n",
+      "[CV] C=10.0, gamma=1.0, kernel=rbf ...................................\n",
+      "[CV] .................... C=10.0, gamma=1.0, kernel=rbf, total=  24.4s\n",
+      "[CV] C=10.0, gamma=3.0, kernel=rbf ...................................\n",
+      "[CV] .................... C=10.0, gamma=3.0, kernel=rbf, total=  27.1s\n",
+      "[CV] C=10.0, gamma=3.0, kernel=rbf ...................................\n",
+      "[CV] .................... C=10.0, gamma=3.0, kernel=rbf, total=  20.2s\n",
+      "[CV] C=10.0, gamma=3.0, kernel=rbf ...................................\n",
+      "[CV] .................... C=10.0, gamma=3.0, kernel=rbf, total=  14.8s\n",
+      "[CV] C=10.0, gamma=3.0, kernel=rbf ...................................\n",
+      "[CV] .................... C=10.0, gamma=3.0, kernel=rbf, total=  28.7s\n",
+      "[CV] C=10.0, gamma=3.0, kernel=rbf ...................................\n",
+      "[CV] .................... C=10.0, gamma=3.0, kernel=rbf, total=  42.7s\n",
+      "[CV] C=30.0, gamma=0.01, kernel=rbf ..................................\n",
+      "[CV] ................... C=30.0, gamma=0.01, kernel=rbf, total=  34.6s\n",
+      "[CV] C=30.0, gamma=0.01, kernel=rbf ..................................\n",
+      "[CV] ................... C=30.0, gamma=0.01, kernel=rbf, total=  21.2s\n",
+      "[CV] C=30.0, gamma=0.01, kernel=rbf ..................................\n",
+      "[CV] ................... C=30.0, gamma=0.01, kernel=rbf, total=  21.0s\n",
+      "[CV] C=30.0, gamma=0.01, kernel=rbf ..................................\n",
+      "[CV] ................... C=30.0, gamma=0.01, kernel=rbf, total=  30.9s\n",
+      "[CV] C=30.0, gamma=0.01, kernel=rbf ..................................\n",
+      "[CV] ................... C=30.0, gamma=0.01, kernel=rbf, total=  42.9s\n",
+      "[CV] C=30.0, gamma=0.03, kernel=rbf ..................................\n",
+      "[CV] ................... C=30.0, gamma=0.03, kernel=rbf, total=  50.5s\n",
+      "[CV] C=30.0, gamma=0.03, kernel=rbf ..................................\n",
+      "[CV] ................... C=30.0, gamma=0.03, kernel=rbf, total=  25.5s\n",
+      "[CV] C=30.0, gamma=0.03, kernel=rbf ..................................\n",
+      "[CV] ................... C=30.0, gamma=0.03, kernel=rbf, total=  24.6s\n",
+      "[CV] C=30.0, gamma=0.03, kernel=rbf ..................................\n",
+      "[CV] ................... C=30.0, gamma=0.03, kernel=rbf, total=  38.1s\n",
+      "[CV] C=30.0, gamma=0.03, kernel=rbf ..................................\n"
      ]
     }
    ],
