--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -4778,7 +4778,31 @@
       "[CV] ................... C=30.0, gamma=0.03, kernel=rbf, total=  24.6s\n",
       "[CV] C=30.0, gamma=0.03, kernel=rbf ..................................\n",
       "[CV] ................... C=30.0, gamma=0.03, kernel=rbf, total=  38.1s\n",
-      "[CV] C=30.0, gamma=0.03, kernel=rbf ..................................\n"
+      "[CV] C=30.0, gamma=0.03, kernel=rbf ..................................\n",
+      "[CV] ................... C=30.0, gamma=0.03, kernel=rbf, total=  36.9s\n",
+      "[CV] C=30.0, gamma=0.1, kernel=rbf ...................................\n",
+      "[CV] .................... C=30.0, gamma=0.1, kernel=rbf, total=  26.2s\n",
+      "[CV] C=30.0, gamma=0.1, kernel=rbf ...................................\n",
+      "[CV] .................... C=30.0, gamma=0.1, kernel=rbf, total=  16.7s\n",
+      "[CV] C=30.0, gamma=0.1, kernel=rbf ...................................\n",
+      "[CV] .................... C=30.0, gamma=0.1, kernel=rbf, total=  13.9s\n",
+      "[CV] C=30.0, gamma=0.1, kernel=rbf ...................................\n",
+      "[CV] .................... C=30.0, gamma=0.1, kernel=rbf, total=  13.1s\n",
+      "[CV] C=30.0, gamma=0.1, kernel=rbf ...................................\n",
+      "[CV] .................... C=30.0, gamma=0.1, kernel=rbf, total=  13.8s\n",
+      "[CV] C=30.0, gamma=0.3, kernel=rbf ...................................\n",
+      "[CV] .................... C=30.0, gamma=0.3, kernel=rbf, total=  21.4s\n",
+      "[CV] C=30.0, gamma=0.3, kernel=rbf ...................................\n",
+      "[CV] .................... C=30.0, gamma=0.3, kernel=rbf, total=  38.9s\n",
+      "[CV] C=30.0, gamma=0.3, kernel=rbf ...................................\n",
+      "[CV] .................... C=30.0, gamma=0.3, kernel=rbf, total=  15.8s\n",
+      "[CV] C=30.0, gamma=0.3, kernel=rbf ...................................\n",
+      "[CV] .................... C=30.0, gamma=0.3, kernel=rbf, total=  12.8s\n",
+      "[CV] C=30.0, gamma=0.3, kernel=rbf ...................................\n",
+      "[CV] .................... C=30.0, gamma=0.3, kernel=rbf, total=  14.7s\n",
+      "[CV] C=30.0, gamma=1.0, kernel=rbf ...................................\n",
+      "[CV] .................... C=30.0, gamma=1.0, kernel=rbf, total=  12.8s\n",
+      "[CV] C=30.0, gamma=1.0, kernel=rbf ...................................\n"
      ]
     }
    ],
